--- a/theme.conf
+++ b/theme.conf
@@ -1,6 +1,6 @@
 [General]
 
-Background="Backgrounds/Mountain.jpg"
+Background="Backgrounds/Vapormoon.jpg"
 ## Path relative to the theme root directory. Most standard image file formats are allowed including support for transparency. (e.g. background.jpeg/illustration.GIF/Foto.png/undraw.svgz)
 
 DimBackgroundImage="0.0"
@@ -9,8 +9,8 @@ DimBackgroundImage="0.0"
 ScaleImageCropped="true"
 ## Whether the image should be cropped when scaled proportionally. Setting this to false will fit the whole image instead, possibly leaving white space. This can be exploited beautifully with illustrations (try it with "undraw.svg" included in the theme).
 
-ScreenWidth="1440"
-ScreenHeight="900"
+ScreenWidth="1920"
+ScreenHeight="1080"
 ## Adjust to your resolution to help SDDM speed up on calculations
 
 
@@ -18,7 +18,7 @@ ScreenHeight="900"
 ## [Blur Settings]
 
 FullBlur="false"
-PartialBlur="true"
+PartialBlur="false"
 ## Enable or disable the blur effect; if HaveFormBackground is set to true then PartialBlur will trigger the BackgroundColor of the form element to be partially transparent and blend with the blur.
 
 BlurRadius="100"
@@ -31,7 +31,7 @@ BlurRadius="100"
 HaveFormBackground="false"
 ## Have a full opacity background color behind the form that takes slightly more than 1/3 of screen estate;  if PartialBlur is set to true then HaveFormBackground will trigger the BackgroundColor of the form element to be partially transparent and blend with the blur.
 
-FormPosition="left"
+FormPosition="right"
 ## Position of the form which takes roughly 1/3 of screen estate. Can be left, center or right.
 
 BackgroundImageHAlignment="center"
@@ -40,14 +40,14 @@ BackgroundImageHAlignment="center"
 BackgroundImageVAlignment="center"
 ## As before but for the vertical position of the background picture relative to its visible area.
 
-MainColor="white"
+MainColor="#f5e0a5"
 ## Used for all elements when not focused/hovered etc. Usually the best effect is achieved by having this be either white or a very dark grey like #444 (not black for smoother antialias)
 ## Colors can be HEX or Qt names (e.g. red/salmon/blanchedalmond). See https://doc.qt.io/qt-5/qml-color.html
 
-AccentColor="#fb884f"
+AccentColor="#FD2C77"
 ## Used for elements in focus/hover/pressed. Should be contrasting to the background and the MainColor to achieve the best effect.
 
-BackgroundColor="#444"
+BackgroundColor="#0f0c18"
 ## Used for the user and session selection background as well as for ScreenPadding and FormBackground when either is true. If PartialBlur and FormBackground are both enabled this color will blend with the blur effect.
 
 OverrideLoginButtonTextColor=""
@@ -56,7 +56,7 @@ OverrideLoginButtonTextColor=""
 InterfaceShadowSize="6"
 ## Integer used as multiplier. Size of the shadow behind the user and session selection background. Decrease or increase if it looks bad on your background. Initial render can be slow no values above 5-7.
 
-InterfaceShadowOpacity="0.6"
+InterfaceShadowOpacity="1.0"
 ## Double between 0 and 1. Alpha channel of the shadow behind the user and session selection background. Decrease or increase if it looks bad on your background.
 
 RoundCorners="20"
@@ -65,7 +65,7 @@ RoundCorners="20"
 ScreenPadding="0"
 ## Integer in pixels. Increase or delete this to have a padding of color BackgroundColor all around your screen. This makes your login greeter appear as if it was a canvas. Cool!
 
-Font="Noto Sans"
+Font="IBM Plex Sans"
 ## If you want to choose a custom font it will have to be available to the X root user. See https://wiki.archlinux.org/index.php/fonts#Manual_installation
 
 FontSize=""
@@ -84,7 +84,7 @@ ForceLastUser="true"
 ForcePasswordFocus="true"
 ## Give automatic focus to the password field. Together with ForceLastUser this makes for the fastest login experience.
 
-ForceHideCompletePassword="false"
+ForceHideCompletePassword="true"
 ## If you don't like to see any character at all not even while being entered set this to true.
 
 ForceHideVirtualKeyboardButton="false"
@@ -109,14 +109,14 @@ Locale=""
 HourFormat="HH:mm"
 ## Defaults to Locale.ShortFormat - Accepts "long" or a custom string like "hh:mm A". See http://doc.qt.io/qt-5/qml-qtqml-date.html
 
-DateFormat="dddd, d of MMMM"
+DateFormat="dddd, d MMMM yyyy"
 ## Defaults to Locale.LongFormat - Accepts "short" or a custom string like "dddd, d 'of' MMMM". See http://doc.qt.io/qt-5/qml-qtqml-date.html
 
 
 
 ## [Translations]
 
-HeaderText="Welcome!"
+HeaderText=""
 ## Header can be empty to not display any greeting at all. Keep it short.
 
 ## SDDM may lack proper translation for every element. Suger defaults to SDDM translations. Please help translate SDDM as much as possible for your language: https://github.com/sddm/sddm/wiki/Localization. These are in order as they appear on screen.
